--- a/breast_cancer_diagnostic.ipynb
+++ b/breast_cancer_diagnostic.ipynb
@@ -29,18 +29,15 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "import seaborn as sb\n",
-        "import plotly.express as px\n",
         "import matplotlib.pyplot as plt\n",
         "import plotly.graph_objects as go\n",
         "\n",
         "from plotly.subplots import make_subplots\n",
-        "from sklearn.preprocessing import LabelEncoder, StandardScaler, OneHotEncoder\n",
-        "from sklearn.compose import ColumnTransformer\n",
+        "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
         "from sklearn.decomposition import PCA\n",
         "from sklearn.pipeline import Pipeline\n",
-        "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
         "from sklearn.model_selection import train_test_split, KFold, cross_val_score, GridSearchCV, cross_val_predict\n",
-        "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report, roc_auc_score\n",
+        "from sklearn.metrics import accuracy_score, classification_report\n",
         "from sklearn.naive_bayes import GaussianNB\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
