--- a/breast_cancer_diagnostic.ipynb
+++ b/breast_cancer_diagnostic.ipynb
@@ -1447,14 +1447,14 @@
         }
       ],
       "source": [
-        "fig, axes = plt.subplots(2, 3, figsize=(20,8))\n",
+        "fig, axes = plt.subplots(2, 3, figsize=(20, 8))\n",
         "\n",
-        "sb.histplot(data['area_mean'], ax = axes[0,0])\n",
-        "sb.histplot(data['radius_mean'], ax = axes[0,1])\n",
-        "sb.histplot(data['texture_mean'], ax = axes[0,2])\n",
-        "sb.histplot(data['perimeter_mean'], ax = axes[1,0])\n",
-        "sb.histplot(data['smoothness_mean'], ax = axes[1,1])\n",
-        "sb.histplot(data['concavity_mean'], ax = axes[1,2])"
+        "sb.histplot(data['area_mean'], ax = axes[0, 0])\n",
+        "sb.histplot(data['radius_mean'], ax = axes[0, 1])\n",
+        "sb.histplot(data['texture_mean'], ax = axes[0, 2])\n",
+        "sb.histplot(data['perimeter_mean'], ax = axes[1, 0])\n",
+        "sb.histplot(data['smoothness_mean'], ax = axes[1, 1])\n",
+        "sb.histplot(data['concavity_mean'], ax = axes[1, 2])"
       ]
     },
     {
