--- a/breast_cancer_diagnostic.ipynb
+++ b/breast_cancer_diagnostic.ipynb
@@ -4512,6 +4512,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Function to split the data for training and test"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 90,
       "metadata": {
