--- a/breast_cancer_diagnostic.ipynb
+++ b/breast_cancer_diagnostic.ipynb
@@ -4489,6 +4489,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Functions to initialize metrics variables in a hash table"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 89,
       "metadata": {
