--- a/breast_cancer_diagnostic.ipynb
+++ b/breast_cancer_diagnostic.ipynb
@@ -4370,7 +4370,7 @@
         "id": "zCONIjy2TBT9"
       },
       "source": [
-        "Graph Accuracy"
+        "Plot Accuracy Metrics"
       ]
     },
     {
