--- a/breast_cancer_diagnostic.ipynb
+++ b/breast_cancer_diagnostic.ipynb
@@ -4381,7 +4381,7 @@
       },
       "outputs": [],
       "source": [
-        "def graph_accuracy(metrics, training_accuracy, test_accuracy, cv_accuracy):\n",
+        "def plot_accuracy(metrics, training_accuracy, test_accuracy, cv_accuracy):\n",
         "  fig = make_subplots(\n",
         "    rows=1, cols=3,\n",
         "    specs=[[{\"type\": \"scatter\"}, {\"type\": \"scatter\"}, {\"type\": \"scatter\"}]],\n",
@@ -4869,7 +4869,7 @@
         }
       ],
       "source": [
-        "graph_accuracy(metrics, predictors_scores['training'], predictors_scores['test'], predictors_scores['cv'])"
+        "plot_accuracy(metrics, predictors_scores['training'], predictors_scores['test'], predictors_scores['cv'])"
       ]
     },
     {
@@ -5997,7 +5997,7 @@
         }
       ],
       "source": [
-        "graph_accuracy(metrics, predictors_scores['training'], predictors_scores['test'], predictors_scores['cv'])"
+        "plot_accuracy(metrics, predictors_scores['training'], predictors_scores['test'], predictors_scores['cv'])"
       ]
     },
     {
@@ -6313,7 +6313,7 @@
         }
       ],
       "source": [
-        "graph_accuracy(metrics, predictors_scores['training'], predictors_scores['test'], predictors_scores['cv'])"
+        "plot_accuracy(metrics, predictors_scores['training'], predictors_scores['test'], predictors_scores['cv'])"
       ]
     },
     {
@@ -6698,7 +6698,7 @@
         }
       ],
       "source": [
-        "graph_accuracy(metrics, predictors_scores['training'], predictors_scores['test'], predictors_scores['cv'])"
+        "plot_accuracy(metrics, predictors_scores['training'], predictors_scores['test'], predictors_scores['cv'])"
       ]
     },
     {
@@ -7083,7 +7083,7 @@
         }
       ],
       "source": [
-        "graph_accuracy(metrics, predictors_scores['training'], predictors_scores['test'], predictors_scores['cv'])"
+        "plot_accuracy(metrics, predictors_scores['training'], predictors_scores['test'], predictors_scores['cv'])"
       ]
     },
     {
@@ -7663,7 +7663,7 @@
         }
       ],
       "source": [
-        "graph_accuracy(metrics, predictors_scores['training'], predictors_scores['test'], predictors_scores['cv'])"
+        "plot_accuracy(metrics, predictors_scores['training'], predictors_scores['test'], predictors_scores['cv'])"
       ]
     },
     {
@@ -8577,7 +8577,7 @@
         }
       ],
       "source": [
-        "graph_accuracy(metrics, predictors_scores['training'], predictors_scores['test'], predictors_scores['cv'])"
+        "plot_accuracy(metrics, predictors_scores['training'], predictors_scores['test'], predictors_scores['cv'])"
       ]
     },
     {
