--- a/breast_cancer_diagnostic.ipynb
+++ b/breast_cancer_diagnostic.ipynb
@@ -4332,7 +4332,7 @@
       },
       "outputs": [],
       "source": [
-        "def graph_PCA(metrics):\n",
+        "def plot_PCA(metrics):\n",
         "  fig = make_subplots(\n",
         "    rows=1, cols=3,\n",
         "    specs=[[{\"type\": \"scatter\"}, {\"type\": \"scatter\"}, {\"type\": \"scatter\"}]],\n",
@@ -4813,7 +4813,7 @@
         }
       ],
       "source": [
-        "graph_PCA(metrics)"
+        "plot_PCA(metrics)"
       ]
     },
     {
@@ -5941,7 +5941,7 @@
         }
       ],
       "source": [
-        "graph_PCA(metrics)"
+        "plot_PCA(metrics)"
       ]
     },
     {
@@ -6257,7 +6257,7 @@
         }
       ],
       "source": [
-        "graph_PCA(metrics)"
+        "plot_PCA(metrics)"
       ]
     },
     {
@@ -6642,7 +6642,7 @@
         }
       ],
       "source": [
-        "graph_PCA(metrics)"
+        "plot_PCA(metrics)"
       ]
     },
     {
@@ -7027,7 +7027,7 @@
         }
       ],
       "source": [
-        "graph_PCA(metrics)"
+        "plot_PCA(metrics)"
       ]
     },
     {
@@ -7607,7 +7607,7 @@
         }
       ],
       "source": [
-        "graph_PCA(metrics)"
+        "plot_PCA(metrics)"
       ]
     },
     {
@@ -8503,7 +8503,7 @@
         }
       ],
       "source": [
-        "graph_PCA(metrics)"
+        "plot_PCA(metrics)"
       ]
     },
     {
