--- a/breast_cancer_diagnostic.ipynb
+++ b/breast_cancer_diagnostic.ipynb
@@ -8235,9 +8235,23 @@
       "source": [
         "### Naive Bayes\n",
         "\n",
+        "Original data set\n",
+        "\n",
         "- Training Accuracy: 94.22%\n",
-        "- Test Accuracy: 91.23%\n",
-        "- Cross validation Accuracy: 93.47%\n",
+        "- Test Accuracy: 92.40%\n",
+        "- Cross validation Accuracy: 93.85%\n",
+        "\n",
+        "Data set without outliers\n",
+        "\n",
+        "- Training Accuracy: 94.80%\n",
+        "- Test Accuracy: 93.96%\n",
+        "- Cross validation Accuracy: 94.55%\n",
+        "\n",
+        "PCA: 6 components\n",
+        "\n",
+        "- Training Accuracy: 93.32%\n",
+        "- Test Accuracy: 91.81%\n",
+        "- Cross validation Accuracy: 93.14%\n",
         "\n",
         "### SVM\n",
         "\n",
