--- a/breast_cancer_diagnostic.ipynb
+++ b/breast_cancer_diagnostic.ipynb
@@ -8253,17 +8253,31 @@
         "- Test Accuracy: 91.81%\n",
         "- Cross validation Accuracy: 93.14%\n",
         "\n",
+        "### Logistic Regression\n",
+        "\n",
+        "Original data set\n",
+        "\n",
+        "- Training Accuracy: 95.48%\n",
+        "- Test Accuracy: 96.49%\n",
+        "- Cross validation Accuracy: 95.25%\n",
+        "\n",
+        "Data set without outliers\n",
+        "\n",
+        "- Training Accuracy: 95.95%\n",
+        "- Test Accuracy: 93.96%\n",
+        "- Cross validation Accuracy: 94.75%\n",
+        "\n",
+        "PCA: 4 components\n",
+        "\n",
+        "- Training Accuracy: 98.24%\n",
+        "- Test Accuracy: 97.07%\n",
+        "- Cross validation Accuracy: 97.36%\n",
+        "\n",
         "### SVM\n",
         "\n",
         "- Training Accuracy: 98.49%\n",
         "- Test Accuracy: 97.66%\n",
         "- Cross validation Accuracy: 97.88%\n",
-        "\n",
-        "### Logistic Regression\n",
-        "\n",
-        "- Training Accuracy: 98.99%\n",
-        "- Test Accuracy: 97.66%\n",
-        "- Cross validation Accuracy: 98.06%\n",
         "\n",
         "### KNN\n",
         "\n",
