--- a/breast_cancer_diagnostic.ipynb
+++ b/breast_cancer_diagnostic.ipynb
@@ -8229,12 +8229,15 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "5KMbOTcM8DAN"
-      },
+      "metadata": {},
       "source": [
-        "### Naive Bayes\n",
-        "\n",
+        "### Naive Bayes"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "Original data set\n",
         "\n",
         "- Training Accuracy: 94.22%\n",
@@ -8251,10 +8254,20 @@
         "\n",
         "- Training Accuracy: 93.32%\n",
         "- Test Accuracy: 91.81%\n",
-        "- Cross validation Accuracy: 93.14%\n",
-        "\n",
-        "### Logistic Regression\n",
-        "\n",
+        "- Cross validation Accuracy: 93.14%"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Logistic Regression"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "Original data set\n",
         "\n",
         "- Training Accuracy: 95.48%\n",
@@ -8271,38 +8284,122 @@
         "\n",
         "- Training Accuracy: 98.24%\n",
         "- Test Accuracy: 97.07%\n",
-        "- Cross validation Accuracy: 97.36%\n",
+        "- Cross validation Accuracy: 97.36%"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### SVM"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Original data set\n",
         "\n",
-        "### SVM\n",
+        "- Training Accuracy: 90.95%\n",
+        "- Test Accuracy: 94.74%\n",
+        "- Cross validation Accuracy: 91.74%\n",
         "\n",
-        "- Training Accuracy: 98.49%\n",
-        "- Test Accuracy: 97.66%\n",
-        "- Cross validation Accuracy: 97.88%\n",
+        "Data set without outliers\n",
         "\n",
-        "### KNN\n",
+        "- Training Accuracy: 93.06%\n",
+        "- Test Accuracy: 92.62%\n",
+        "- Cross validation Accuracy: 92.53%\n",
         "\n",
-        "- Training Accuracy: 97.99%\n",
-        "- Test Accuracy: 97.08%\n",
-        "- Cross validation Accuracy: 97.17%\n",
+        "PCA: 6 components\n",
         "\n",
-        "### Decision Tree\n",
+        "- Training Accuracy: 98.24%\n",
+        "- Test Accuracy: 97.07%\n",
+        "- Cross validation Accuracy: 97.18%"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### KNN"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Original data set\n",
+        "\n",
+        "- Training Accuracy: 94.97%\n",
+        "- Test Accuracy: 96.49%\n",
+        "- Cross validation Accuracy: 93.15%\n",
+        "\n",
+        "Data set without outliers\n",
+        "\n",
+        "- Training Accuracy: 95.38%\n",
+        "- Test Accuracy: 93.96%\n",
+        "- Cross validation Accuracy: 94.34%\n",
+        "\n",
+        "PCA: 7 components\n",
+        "\n",
+        "- Training Accuracy: 97.73%\n",
+        "- Test Accuracy: 95.90%\n",
+        "- Cross validation Accuracy: 96.66%"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Decision Tree"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Original data set\n",
         "\n",
         "- Training Accuracy: 96.48%\n",
         "- Test Accuracy: 95.32%\n",
         "- Cross validation Accuracy: 93.67%\n",
         "\n",
-        "### Random Forest\n",
+        "Data set without outliers\n",
         "\n",
-        "- Training Accuracy: 98.99%\n",
-        "- Test Accuracy: 96.49%\n",
-        "- Cross validation Accuracy: 95.76%\n",
+        "- Training Accuracy: 95.38%\n",
+        "- Test Accuracy: 93.96%\n",
+        "- Cross validation Accuracy: 94.34%\n",
         "\n",
-        "### XGBoost\n",
+        "PCA: 7 components\n",
         "\n",
-        "- Training Accuracy: 100.00%\n",
-        "- Test Accuracy: 96.49%\n",
-        "- Cross validation Accuracy: 96.65%"
+        "- Training Accuracy: 97.73%\n",
+        "- Test Accuracy: 95.90%\n",
+        "- Cross validation Accuracy: 96.66%"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Random Forest"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### XGBoost"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     },
     {
       "cell_type": "markdown",
