--- a/breast_cancer_diagnostic.ipynb
+++ b/breast_cancer_diagnostic.ipynb
@@ -8366,15 +8366,15 @@
         "\n",
         "Data set without outliers\n",
         "\n",
-        "- Training Accuracy: 95.38%\n",
-        "- Test Accuracy: 93.96%\n",
-        "- Cross validation Accuracy: 94.34%\n",
+        "- Training Accuracy: 97.69%\n",
+        "- Test Accuracy: 92.62%\n",
+        "- Cross validation Accuracy: 94.14%\n",
         "\n",
-        "PCA: 7 components\n",
+        "PCA: 1 component\n",
         "\n",
-        "- Training Accuracy: 97.73%\n",
-        "- Test Accuracy: 95.90%\n",
-        "- Cross validation Accuracy: 96.66%"
+        "- Training Accuracy: 95.22%\n",
+        "- Test Accuracy: 90.64%\n",
+        "- Cross validation Accuracy: 94.42%"
       ]
     },
     {
