--- a/breast_cancer_diagnostic.ipynb
+++ b/breast_cancer_diagnostic.ipynb
@@ -8387,7 +8387,25 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": []
+      "source": [
+        "Original data set\n",
+        "\n",
+        "- Training Accuracy: 98.99%\n",
+        "- Test Accuracy: 96.49%\n",
+        "- Cross validation Accuracy: 95.78%\n",
+        "\n",
+        "Data set without outliers\n",
+        "\n",
+        "- Training Accuracy: 99.13%\n",
+        "- Test Accuracy: 95.30%\n",
+        "- Cross validation Accuracy: 96.16%\n",
+        "\n",
+        "PCA: 5 components\n",
+        "\n",
+        "- Training Accuracy: 97.73%\n",
+        "- Test Accuracy: 92.39%\n",
+        "- Cross validation Accuracy: 94.37%"
+      ]
     },
     {
       "cell_type": "markdown",
