--- a/breast_cancer_diagnostic.ipynb
+++ b/breast_cancer_diagnostic.ipynb
@@ -8417,7 +8417,25 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": []
+      "source": [
+        "Original data set\n",
+        "\n",
+        "- Training Accuracy: 100.00%\n",
+        "- Test Accuracy: 96.49%\n",
+        "- Cross validation Accuracy: 96.66%\n",
+        "\n",
+        "Data set without outliers\n",
+        "\n",
+        "- Training Accuracy: 100.00%\n",
+        "- Test Accuracy: 93.29%\n",
+        "- Cross validation Accuracy: 96.57%\n",
+        "\n",
+        "PCA: 10 components\n",
+        "\n",
+        "- Training Accuracy: 99.49%\n",
+        "- Test Accuracy: 94.49%\n",
+        "- Cross validation Accuracy: 96.66%"
+      ]
     },
     {
       "cell_type": "markdown",
